--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (2.6.2) UNRELEASED; urgency=low
+
+  * Add an editcontent hook.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 26 Aug 2007 16:50:24 -0400
+
 ikiwiki (2.6.1) unstable; urgency=low
 
   * Ye olde brown paper bag.
