--- a/doc/todo/wikiwyg/discussion.mdwn
+++ b/doc/todo/wikiwyg/discussion.mdwn
@@ -67,10 +67,9 @@ changes.diff:
   prefer a translated underlay, and use the english version of untranslated
   pages, for example.
 * When is the WIKIWYG variable in misc.tmpl used?
-* I wish there were a good way to move the code to handle saving a part of
-  a page into the plugin. But there doesn't seem to be one that's any
-  cleaner than keeping the code where it is. So I'll probably just apply
-  that hunk.
+* Could you move the code that handles saving a page of the page into the
+  plugin? I just added an editcontent hook, which should allow you to do
+  that.
 * Your patch exports run_hooks, but I don't see the plugin using that.
 * I don't know about exporting pagetitle. So far, only the inline plugin
   needs to use that function, I generally only export things after it's
