web commit by http://jeremie.koenig.myopenid.com/: whoops

--- a/doc/todo/format_escape.mdwn
+++ b/doc/todo/format_escape.mdwn
@@ -76,7 +76,7 @@ which aren't used as real extensions but provide useful intermediate types.
 >> the preprocessed source. This way you can use docutils to convert your
 >> rst documents to other formats. Raw html would be loosed in such a
 >> process (both with directives and marks), which is another
->> argument for "_link" and other intermediate forms. I think I can
+>> argument for `"_link"` and other intermediate forms. I think I can
 >> come up with a way for rst's convert_link to be used only for export
 >> purposes, though.
 
