web commit by tkillian

--- a/doc/todo/wikiwyg/discussion.mdwn
+++ b/doc/todo/wikiwyg/discussion.mdwn
@@ -96,6 +96,7 @@ wikiwyg.tar.gz
   * <http://ikiwiki.xbaud.com/JavaScript_Diffs.tar.gz>, also emailed them to you
     in case my internet goes down.
     * Could you redo that with diff -u plz?
+      * Link is updated
 * If the files aren't modified, would it be better for users to get them
   from the wikiwgy upstream, instead of including them in the plugin? (If so,
   they'd go in their own Debian package..)
