web commit by tkillian

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -56,6 +56,8 @@ Now I see it created directories for my data. I fixed that by setting
 usedirs (I see that is in the release notes for 2.0) and rerunning ikiwiki --setup
 but I still have empty pages for editing (no textbox no html at all).
 
+> Is IkiWiki crashing? If so, it would probably leave error text in the apache logs. --[[TaylorKillian]]
+
 (I am posting this now, but will do some research and post some more.)
 
 Is there any webpage with upgrade steps?
