web commit by JeremyReed: Fix my typo.

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -91,7 +91,7 @@ Is there any webpage with upgrade steps?
 > Users are expected to read [[news]], which points out any incompatible
 > changes or cases where manual action is needed.
 
->> I read it but read the userdirs option wrong :(.
+>> I read it but read the usedirs option wrong :(.
 >> Also it appears to be missing the news from between 1.40 to 2.0 unless they dont' exist.
 >> If they do exist maybe they have release notes I need?
 
