this is fixed, mark done

--- a/doc/todo/plugin_dependency_calulation.mdwn
+++ b/doc/todo/plugin_dependency_calulation.mdwn
@@ -20,5 +20,5 @@ It also suggests that plugins will want to examine pages and/or
 calculations. For example, the version plugin would need to store info
 about what pages use it.
 
-> I fixed this without realizing it when I added the needsbuild hook!
+> I [[fixed|done]] this without realizing it when I added the needsbuild hook!
 > --[[Joey]]
