--- a/doc/todo/Option_to_make_title_an_h1__63__.mdwn
+++ b/doc/todo/Option_to_make_title_an_h1__63__.mdwn
@@ -4,3 +4,5 @@ Currently, the page title (either the name of the page or the title specified wi
 > the page title, it's not just a page title, it has the links to parent pages.
 > I also don't want to get in the business of munging up markdown's semantics. This 
 > way, # is reserved for h1 if you choose to use headers in your page. --[[Joey]]
+
+[[done]]
