done by editdiff

--- a/doc/todo/preview_changes.mdwn
+++ b/doc/todo/preview_changes.mdwn
@@ -10,3 +10,5 @@ Some discussion from the main [[/index/discussion]] page:
 >>
 
 See the [[plugins/editdiff]] plugin --[[JeremieKoenig]]
+
+[[done]]
