--- a/doc/todo/conditional_underlay_files.mdwn
+++ b/doc/todo/conditional_underlay_files.mdwn
@@ -21,4 +21,9 @@ hackish.
 > plugins were enabled.
 > 
 > Using the conditionals in a page to control what other pages get built
-> feels complex to me, --[[Joey]]
+> feels complex to me.
+> 
+> Instead, this has been implmented as the `add_underlay()` function.
+> [[done]]
+> --[[Joey]]
+
