--- a/doc/blog.mdwn
+++ b/doc/blog.mdwn
@@ -67,7 +67,7 @@ directive:
 * `quick` - Build archives in quick mode, without reading page contents for
   metadata. By default, this also turns off generation of any feeds.
 * `template` - Specifies the template to fill out to display each inlined
-  page. By default the `inlinepage` [[template|wikitemplates]] is used, while
+  page. By default the `inlinepage` template is used, while
   the `archivepage` template is used for archives. Set this parameter to
   use some other, custom template, such as the `titlepage` template that
   only shows post titles. Note that you should still set `archive=yes` if
