--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,11 @@ ikiwiki (2.7) UNRELEASED; urgency=low
     function.
   * Split out smiley underlay files into a separate underlay, so if the plugin
     isn't used, the wiki isn't bloated with all those files.
+  * Allow -cgi -wrapper to be passed on the command line to generate a
+    wrapper.
+  * Fix some taint issues with generating wrappers using the command line.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 27 Aug 2007 20:48:51 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 28 Aug 2007 17:11:30 -0400
 
 ikiwiki (2.6.1) unstable; urgency=low
 
