--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,9 @@ ikiwiki (2.7) UNRELEASED; urgency=low
   * Allow -cgi -wrapper to be passed on the command line to generate a
     wrapper.
   * Fix some taint issues with generating wrappers using the command line.
+  * Don't allow newlines in link text in a wikilink.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 28 Aug 2007 17:11:30 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 28 Aug 2007 18:54:06 -0400
 
 ikiwiki (2.6.1) unstable; urgency=low
 
