--- a/doc/bugs/wikilink_in_table.mdwn
+++ b/doc/bugs/wikilink_in_table.mdwn
@@ -1,10 +1,10 @@
 I try to create wikilink in table. But it does not work. Here is example:
 
-[[table class=table1 data="""
-[[wikilink_test|index]]
-[[wikilink_test\|index]]
-[wikilink test](/servers/webmail1)
-"""]]
+	\[[table class=table1 data="""
+	[[wikilink_test|index]]
+	[[wikilink_test\|index]]
+	[wikilink test](/servers/webmail1)
+	"""]]
 
 First two wikilink entries do not work.
 
