--- a/doc/bugs/wikilink_in_table.mdwn
+++ b/doc/bugs/wikilink_in_table.mdwn
@@ -1,8 +1,8 @@
 I try to create wikilink in table. But it does not work. Here is example:
 
 	\[[table class=table1 data="""
-	[[wikilink_test|index]]
-	[[wikilink_test\|index]]
+	\[[wikilink_test|index]]
+	\[[wikilink_test\|index]]
 	[wikilink test](/servers/webmail1)
 	"""]]
 
@@ -20,8 +20,8 @@ What exactly is a difference between wikilink and URL reference to the same page
 Trying to report this I found something weird. I changed in the example [[ with || because wiki renders something wrongly. You can see what I tried originally here:
 
 	\[[table class=table1 data="""
-	[[wikilink_test|servers/webmail1]]
-	[[wikilink_test|servers/webmail1]]
+	\[[wikilink_test|servers/webmail1]]
+	\[[wikilink_test|servers/webmail1]]
 	[wikilink test](/servers/webmail1)
 	"""]]
 
