--- a/doc/bugs/wikilink_in_table.mdwn
+++ b/doc/bugs/wikilink_in_table.mdwn
@@ -29,4 +29,4 @@ Please  click edit to see unrendered text. First, it is not monospace-d (I have 
 Am I doing something wrong ?
 
 > See above for the right way to do it. Note that I also fixed a minor bug
-> in ikiwiki that makes it not display the opening `[[` above. --[[Joey]]
+> in ikiwiki to allow this. --[[Joey]]
