* mercurial: Fix rcs_getctime (thanks, bma)

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,8 +16,9 @@ ikiwiki (2.7) UNRELEASED; urgency=low
   * Turn on allow_loose_quotes in the table plugin's Text::CSV object,
     so that links from wikilinks don't confuse the parser.
   * mercurial: Pass --style default to hg log to ensure right format is used.
+  * mercurial: Fix rcs_getctime (thanks, bma)
 
- -- Joey Hess <joeyh@debian.org>  Tue, 28 Aug 2007 22:00:29 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 28 Aug 2007 22:15:52 -0400
 
 ikiwiki (2.6.1) unstable; urgency=low
 
