web commit by madmax

--- a/doc/bugs/wikilink_in_table.mdwn
+++ b/doc/bugs/wikilink_in_table.mdwn
@@ -12,6 +12,8 @@ The last one is url link and it works but it is not a wikilink. Or maybe it does
 
 > [[fixed|done]] --[[Joey]]
 
+>> works !! Great!
+
 What exactly is a difference between wikilink and URL reference to the same page ?
 
 > ikiwiki will not be able to track pages linked using urls as having a
@@ -30,3 +32,5 @@ Am I doing something wrong ?
 
 > See above for the right way to do it. Note that I also fixed a minor bug
 > in ikiwiki to allow this. --[[Joey]]
+
+>> Just curious ... if I wanted to have that block in monospace (four spaces in front of each line), how can I do that ?
