web commit by madmax

--- a/doc/bugs/iniline_breaks_toc_plugin.mdwn
+++ b/doc/bugs/iniline_breaks_toc_plugin.mdwn
@@ -13,6 +13,13 @@ bla bla bla
 
 bla bla
 
+[[table class=table1 data="""
+Customer|Amount
+Fulanito|134,34
+Menganito|234,56
+Menganito|234,56
+"""]]
+
 [[inline pages="users/joey" raw="yes"]]
 
 bla bla
