web commit by madmax

--- a/doc/bugs/iniline_breaks_toc_plugin.mdwn
+++ b/doc/bugs/iniline_breaks_toc_plugin.mdwn
@@ -1,3 +1,10 @@
+Hi, I try to make an example to reproduce some bug with inline and toc plugins.
+My friend uses 
+[[inline pages="users/joey" raw="yes"]]
+to include common snippets in various pages, and it works as advertised, but if toc plugin is used, page is messed up.
+
+I'll try here to reproduce one example...
+
 TEST1
 =====
 
@@ -13,7 +20,7 @@ bla bla bla
 
 bla bla
 
-[[table class=table1 data="""
+[[table data="""
 Customer|Amount
 Fulanito|134,34
 Menganito|234,56
